[tool.poetry]
name = "whitehamster26_brain_games"
version = "0.1.1"
description = "This is my first hexlet project :)"
authors = ["WhiteHamster"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[[tool.poetry.source]]
name = "whitehamster26_brain_games"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

